--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "csslint": "stylelint **/*.{css,scss} --fix",
     "eslint": "eslint **/*.{js,jsx} --fix",
@@ -33,6 +33,7 @@
     "stylelint-config-standard": "^34.0.0",
     "stylelint-csstree-validator": "^3.0.0",
     "stylelint-scss": "^5.1.0",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
 }
