--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "vite",
     "build": "vite build",
     "csslint": "stylelint **/*.{css,scss} --fix",
+    "deploy": "vite build && gh-pages -d dist",
     "eslint": "eslint **/*.{js,jsx} --fix",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -31,6 +32,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.29",
     "stylelint": "^15.10.2",
     "stylelint-config-standard": "^34.0.0",
